[tool.poetry]
name = "bit-cloud"
version = "0.1.0"
description = ""
authors = ["Prabhakar Dev <ayushashi11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bit = 'bit_cloud.cli:app'
